--- a/style.css
+++ b/style.css
@@ -1,17 +1,56 @@
 body {
-    /* Define uma largura e altura mínima para a janelinha da extensão */
-    width: 400px; 
+    
+    width: 380px; 
     min-height: 500px;
     margin: 0;
     padding: 10px;
-    background-color: #f4f4f9;
+    background-color: #1f1f23;
+    font-family: sans-serif;
+    border: solid  #3b3b3f;
+    border-radius: 8px;
+}
+
+
+/* Impede que a página inteira role, queremos apenas os apps rolando */
+body, html {
+    height: 100%;
+    margin: 0;
+    overflow: hidden; 
     font-family: sans-serif;
 }
 
+.main-layout {
+    
+    display: flex;
+    flex-direction: column;
+    height: 100vh; /* Altura total da janela do navegador */
+}
+
+#btns {
+    padding: 15px;
+    background: #3b3b3f;
+    display: flex;
+    gap: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1); 
+    z-index: 100;
+}
+
+.containerApps {
+    flex: 1; /* Ocupa todo o espaço que sobrar abaixo dos botões */
+    overflow-y: auto; /* Ativa o scroll apenas aqui dentro */
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+    gap: 15px;
+}
+
+
+
 .containerApps {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 20px; 
+    grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+    gap: 15px; 
     padding: 20px;
 }
 
@@ -20,13 +59,50 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 15px;
-    width: 100px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    width: 60px;
+    height: 65px;
     border-radius: 10px;
     text-align: center;
+    cursor:pointer;
+}
+
+.app-card img {
+    width: 48px;  
+    height: 48px;
+    margin-bottom: 8px;
+    object-fit: contain;
 }
 
 
+.app-card p {
+    
+    margin: 0;
+    font-size: 12px; 
+    color: #e4e8ec;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    white-space: nowrap;
+}
+
+
+.containerApps .app-card:hover {
+    background-color: rgba(110, 106, 106, 0.1) !important; 
+    cursor: pointer;
+    transform: scale(1.05); 
+    transition: all 0.2s ease;
+}
+
+app-card:hover {
+    background-color: rgba(40, 41, 43, 0.08);
+}
+
+#btns{
+    margin-top: 20px;
+    margin-left: 30px;
+    align-items: center;
+
+}
 
 #btn-add {
      width: 100px;
@@ -38,13 +114,22 @@ body {
     font-weight: bold;
     cursor: pointer;
     transition: background 0.3s;
+    
 
 
 
 }
 
+#btn-add:hover{
+    cursor: pointer;
+    transform: scale(1.05); 
+    transition: all 0.2s ease;
+
+
+}
+
 #btn-remove {
-    
+    margin-left: 30px;
     padding: 12px;
     background-color: #e75c5c;
     color: white;
@@ -58,6 +143,13 @@ body {
 
 }
 
+#btn-remove:hover{
+    cursor: pointer;
+    transform: scale(1.05); 
+    transition: all 0.2s ease;
+
+
+}
 
 
 #btn-submit {
